# quick-diff-me

./: Cargo.toml  README.md
.github/workflows/: release-executable.yaml  release.yml
src/: app.rs  font.rs  lib.rs  main.rs
src/app/: message.rs  mod.rs  state.rs  subscription.rs  update.rs  view.rs
src/core/: consts.rs  diff.rs  font.rs  mod.rs  types.rs  utils.rs
