[package]
name = "quick-diff-me"
version = "0.3.0"
edition = "2021"

description = "Quick Diff (unified diff) on Microsoft Excel viewer as Iced GUI app"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui", "visualization", "development-tools", "data-structures"]
keywords = ["gui", "compare", "diff", "excel", "xlsx"]
rust-version = "1.78.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to improve productivity
# strip = "debuginfo" # reduce size
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = true

[dependencies]
iced = { version = "^0.13", features = ["debug", "wgpu"] }
rfd = "^0.15"
sheets-diff = "1"
tracing-subscriber = "^0.3"
